--- a/GameData/NewKerbol/Settings.cfg
+++ b/GameData/NewKerbol/Settings.cfg
@@ -1,4 +1,7 @@
-modEnabled = False
-ZombificationRate = 1.0
-MaximumWindForce = 10.0
-//BuildKrakenTextures = false
+modEnabled = True
+UseCustomScience = True
+UseSpaceKraken = False
+UseRedSun = True
+ZombificationRate = 1
+MaxWindStrength = 10
+DoParachutesCut = True
